change keywords to tags

--- a/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Markdown/ReadmeOneInput.cshtml
@@ -55,7 +55,7 @@
             
             <span><input type="checkbox" name="hasPaginationSection" value="true"> : pagination with api</span>
           </div>
-        </div>
+          </div>
 
 
 
@@ -65,40 +65,37 @@
           </div>
           <div class="col-md-3">
           <div class="form-group">
-            <label for="keyword1">keyword-1</label>
+            <label for="keyword1">tag 1</label>
             <input class="form-control" id="keyword1" name="keyword1" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword2">keyword-2</label>
+            <label for="keyword2">tag 2</label>
             <input class="form-control" id="keyword2" name="keyword2" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword3">keyword-3</label>
+            <label for="keyword3">tag 3</label>
             <input class="form-control" id="keyword3" name="keyword3" type="text">
           </div>
-    
         </div>
 
         <div class="col-md-3">
         <div class="form-group">
-            <label for="keyword4">keyword-4</label>
+            <label for="keyword4">tag 4</label>
             <input class="form-control" id="keyword4" name="keyword4" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword5">keyword-5</label>
+            <label for="keyword5">tag 5</label>
             <input class="form-control" id="keyword5" name="keyword5" type="text">
           </div>
           <div class="form-group">
-            <label for="keyword6">keyword-6</label>
+            <label for="keyword6">tag 6</label>
             <input class="form-control" id="keyword6" name="keyword6" type="text">
           </div>
         </div>
-
-
           </div>
       
-      <div class="row border">
 
+      <div class="row border">
           <div class="col-md-6">
           <div class="form-group">
             <label for="title">title</label>
@@ -117,7 +114,7 @@
             <input class="form-control" id="about" name="about" type="text">
           </div>
         </div>  
-       
+      
         <div class="col-md-3">
                   <div class="form-group">
             <b>Technologies Used: </b><br />
@@ -149,7 +146,7 @@
           </div>
           </div>
 
-          
+
        <div class="col-md-3">
           <div class="form-group">
           <b>Requirements: </b><br />
