modify background and favicon and tweak rgb values

--- a/MakeMeTakeMeReadMe/Views/Shared/_Layout.cshtml
+++ b/MakeMeTakeMeReadMe/Views/Shared/_Layout.cshtml
@@ -8,13 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/styles.css">
-    <link rel="icon" type="image/png" href="https://coding-assets.s3-us-west-2.amazonaws.com/favicons/MakeMeTakeMeReadMe.Solution.png">
+    <link rel="icon" type="image/png" href="https://coding-assets.s3-us-west-2.amazonaws.com/favicons/mmtmrm-favicon.png">
   </head>
   <body>
     @Html.Partial("Navigation")
     <div class="flex container">
     @RenderBody()
-    @Html.Partial("Footer")
     </div>
   </body>
 </html>
